# foo-engine

./: .gitignore  CMakeLists.txt  README.md
engine/src/: defines.h  entry_point.h  game_types.h  test.c  test.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  fmemory.c  fmemory.h  fstring.c  fstring.h  input.c  input.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_image.c  vulkan_image.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl
testbed/src/: entry_point.c  game.c  game.h  main.c
